@@ -35,6 +35,7 @@ K  1207	added NTLM authentication support for SMTP and IMAP, see NTLMNOTES.txt
 <no id>	include server error message in exception when SMTP authentication fails
 <no id>	com.sun.mail.util.logging.MailHandler contributed by Jason Mehrens
 <no id>	add mail.smtp.noop.strict property, default true
+<no id>	add mail.<protocol>.ssl.trust property to list hosts to be trusted
 
 
 		  CHANGES IN THE 1.4.2 RELEASE
